# data-engineer-exercises

./: .env.default  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  start_dagster_dev.sh
.dbt/: .user.yml  profiles.yml
covid19/: .env  .gitignore  .pdm.toml  README.md  dbt_project.yml  pyproject.toml  raw_tweets_ddl.sql  upload_data.py
covid19/models/: hashtag.sql  reply_delay.sql  screen_name.sql  sources.yml  tweet_number.sql  tweets1.sql  tweets2.sql  tweets3.sql  tweets_sources.sql
dagster-covid19/: .gitignore  pyproject.toml  setup.cfg  setup.py
dagster-covid19/dagster_covid19/: import_data.py
dagster-covid19/dagster_covid19/asset/: __init__.py
dagster-covid19/dagster_covid19/tmpkj4a2z80/history/: runs.db
dagster-covid19/dagster_covid19/tmpkj4a2z80/history/runs/: index.db
dagster-covid19/dagster_covid19/tmpkj4a2z80/schedules/: schedules.db
dagster-home/: dagster.yaml
gcp/: gcp-big-data-ml-fundamentals.md
src/dagster_covid19/: __init__.py
src/dagster_covid19/asset/: __init__.py  asset_resources.py  dbt.py  import_data.py  io_manager.py  kaggle.py  sensor.py
src/dagster_covid19/config/: datatypes.py  path.py  sql_table.py
src/dagster_covid19/resources/: __init__.py  dataframe_io_manager.py  dbt.py  kaggle.py  path.py  postgresql.py  table_io_manager.py
src/openweathermap/: ingest.py  main.py  sink.py  transform.py
src/openweathermap/flink_runner/: docker-compose.yaml
tests/dagster_covid19_tests/config/: test_datatypes.py
tests/dagster_covid19_tests/resources/: test_dataframe_io_manager.py  test_dataframe_io_manager_config.py
