[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "dagster_covid19"

[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Sotatek-HaiHo", email = "hai.ho@sotatek.com"},
]
dependencies = [
    "dagster>=1.2.6",
    "dagster-dbt>=0.18.6",
    "dagit>=1.2.6",
]
requires-python = ">=3.10"
license = {text = "MIT"}
